--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ title: Portuguese 4 You
 author: anabalanuta
 description: Learn the Basics to get around in Portugal
 
-
 # Build settings
 markdown: kramdown
 theme: minima
+
+---
+<h1> Welcome to Portuguese 4 You ! </h1>
