--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Portuguese 4 You
 author: anabalanuta
 description: Learn the Basics to get around in Portugal
-
+student number: 160485769
 
 # Build settings
 markdown: kramdown
